--- a/index.html
+++ b/index.html
@@ -1,210 +1,71 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Character Responsive HTML5 Template</title>
-<!--
-Template 2110 Character
-http://www.tooplate.com/view/2110-character
--->
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Open+Sans:400,600">
-    <!-- https://fonts.google.com/specimen/Open+Sans -->
-    <link rel="stylesheet" href="css/all.min.css">
-    <!-- https://fontawesome.com/ -->
-    <link rel="stylesheet" href="css/tooplate-style.css">
+
+<meta charset="utf-8">
+<title>Colorlib | Free Bootstrap Website Template</title>
+<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0" />
+
+<link href="assets/css/bootstrap.min.css" rel="stylesheet" media="screen">
+<link href="assets/css/template.css" rel="stylesheet" media="screen">
+<script type="3cf86d1824efd1c5f58f0ad5-text/javascript">if ( top !== self ) top.location.replace( self.location.href );// Hey, don't iframe my iframe!</script>
+
+<link href="//cdnjs.cloudflare.com/ajax/libs/font-awesome/3.2.1/css/font-awesome.css" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css?family=Open+Sans:400,700,800,300" rel='stylesheet' type='text/css'>
+<!--[if lt IE 9]>
+		<script>/*@cc_on'abbr article aside audio canvas details figcaption figure footer header hgroup mark meter nav output progress section summary subline time video'.replace(/\w+/g,function(n){document.createElement(n)})@*/</script>
+	<![endif]-->
 </head>
+<body>
 
-<body class="tm-bg-dark">
-    <main class="tm-container masonry">
-        <div class="item tm-bg-white tm-block tm-block-left" data-desktop-seq-no="1" data-mobile-seq-no="1">
-            <p class="tm-hero-text">&ldquo;Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos
-                himenaeos. Maecenas vel lacinia ipsum, nec fermentum diam. Nulla nec gravida odio, eget vestibulum urna.&rdquo;</p>
-            <header class="tm-block-brand">
-                <div class="tm-bg-primary-dark tm-text-white tm-block-brand-inner">
-                    <i class="fas fa-braille fa-3x"></i>
-                    <h1 class="tm-brand-name">Character</h1>
-                </div>
-            </header>
-        </div>
-        <div class="item" data-desktop-seq-no="2" data-mobile-seq-no="4">
-            <img src="img/image-01.jpg" alt="Image" class="tm-img-left">
-        </div>
-        <div class="item tm-bg-secondary tm-text-white tm-block tm-block-wider tm-block-pad tm-block-left-2" data-desktop-seq-no="3"
-            data-mobile-seq-no="5">
-            <i class="fas fa-award fa-4x tm-block-icon"></i>
-            <p>Maecenas scelerisque ex neque, vel ultrices purus pharetra sit amet. Donec consectetur ipsum in elit eleifend
-                porta. Morbi bibendum porttitor dui. Proin molestie purus non nisi blandit rutrum.</p>
-            <div class="tm-text-right">
-                <a href="#" class="tm-btn tm-btn-small tm-btn-primary tm-mt">Read More</a>
-            </div>
-        </div>
-        <div class="item" data-desktop-seq-no="4" data-mobile-seq-no="8">
-            <img src="img/image-04.jpg" alt="Image" class="tm-img-left">
-        </div>
-        <div class="tm-footer" id="tmFooter" data-desktop-seq-no="5" data-mobile-seq-no="9">
-            <img src="img/qr-link-tooplate.png" alt="QR Code" class="tm-img-qr">
-            <div>
-                <p class="tm-mb-small">Copyright &copy; 2018 Company Name</p>
-                <p>Designed by <a rel="nofollow" href="https://www.facebook.com/tooplate">Tooplate</a></p>
-            </div>
-        </div>
-        <div class="item" data-desktop-seq-no="6" data-mobile-seq-no="2">
-            <img src="img/image-02.jpg" alt="Image">
-        </div>
-        <div class="item tm-block-right" data-desktop-seq-no="7" data-mobile-seq-no="3">
-            <div class="tm-block-right-inner tm-bg-primary-light tm-text-white tm-block tm-block-wider tm-block-pad">
-                <header>
-                    <h2 class="tm-text-uppercase">
-                        Proin Molestie Purus Non
-                    </h2>
-                </header>
-                <p>You can freely use this Character HTML Template for your site. Please <a href="https://www.facebook.com/tooplate">follow us</a> on Facebook page for updates. Don't forget to tell your friends about Tooplate. Thank you. :)</p>
-                <p class="tm-mt tm-mb-small">Aenean gravida augue luctus, egestas massa ac, hendrerit ipsum. Vestibulum et
-                    ex sollicitudin, commodo liqula suscipit, laoreet lacus.
-                </p>
-                <!-- -->
-            </div>
-        </div>
+<header class="switcher-bar clearfix">
 
-        <div class="item" data-desktop-seq-no="8" data-mobile-seq-no="6">
-            <img src="img/image-03.jpg" alt="Image">
-        </div>
+<div class="logo textual pull-left">
+<a href="https://colorlib.com/wp/templates/" title="Switcher">
+<img src="assets/img/logo.png" alt="uiCookies">
+</a>
+</div>
 
-        <div class="item tm-bg-white tm-block tm-form-section" data-desktop-seq-no="9" data-mobile-seq-no="7">
-            <div class="tm-form-container tm-block-pad tm-pb-0">
-                <header>
-                    <h2 class="tm-text-uppercase tm-text-gray-light tm-mb">
-                        Contact Us
-                    </h2>
-                </header>
-                <form action="index.html" class="tm-contact-form" method="POST">
-                    <div class="tm-form-group">
-                        <input type="text" id="contact_name" name="contact_name" class="form-control" placeholder="Name" required/>
-                    </div>
-                    <div class="tm-form-group">
-                        <input type="email" id="contact_email" name="contact_email" class="form-control" placeholder="Email" required/>
-                    </div>
-                    <div class="tm-form-group">
-                        <textarea rows="5" id="contact_message" name="contact_message" class="form-control" placeholder="Message" required></textarea>
-                    </div>
-                    <div class="tm-text-right">
-                        <button type="submit" class="tm-btn tm-btn-secondary tm-btn-pad-big">Send</button>
-                    </div>
-                </form>
-            </div>
+<div class="product-switcher pull-left">
+<a href="#" title="Select a Product">
+Select a Product <span>+</span>
+</a>
+</div>
 
-            <div class="tm-form-section-tag">
-                <div class="tm-bg-secondary tm-text-white tm-block-pad tm-form-section-tag-inner">
-                    <header>
-                        <h2>Proin imperdiet commodo nisi</h2>
-                    </header>
-                    <p>Mauris sodales vulputate ante a dapibus Donec vitae maximus dolor, pharetra imperdiet lectus. Praesent
-                        pharetra elit ac est congue volutpat.</p>
-                </div>
-            </div>
-        </div>
+<div class="remove-btn header-btn pull-right">
+<a href="#" title="Close this bar" class="icon-remove"></a>
+</div>
 
-    </main>
-    <script src="js/jquery-3.3.1.min.js"></script>
-    <!-- https://jquery.com/download/ -->
-    <script>
+<div class="purchase-btn header-btn pull-right">
+<a href="#" title="Download" class="icon-cloud-download"></a>
+</div>
 
-        let callAdjustLayout;
-        let currentLayout = "desktop",
-            nextLayout = "desktop";
+<div class="mobile-btn header-btn pull-right hidden-xs">
+<a href="#" title="Smartphone View" class="icon-mobile-phone"></a>
+</div>
 
-        /**
-         * detect IE
-         * returns version of IE or false, if browser is not Internet Explorer
-         */
-        function detectIE() {
-            var ua = window.navigator.userAgent;
+<div class="tablet-btn header-btn pull-right hidden-xs">
+<a href="#" title="Tablet View" class="icon-tablet"></a>
+</div>
 
-            var msie = ua.indexOf('MSIE ');
-            if (msie > 0) {
-                // IE 10 or older => return version number
-                return parseInt(ua.substring(msie + 5, ua.indexOf('.', msie)), 10);
-            }
+<div class="desktop-btn header-btn pull-right hidden-xs">
+<a href="#" title="Desktop View" class="icon-desktop"></a>
+</div>
+</header>
 
-            var trident = ua.indexOf('Trident/');
-            if (trident > 0) {
-                // IE 11 => return version number
-                var rv = ua.indexOf('rv:');
-                return parseInt(ua.substring(rv + 3, ua.indexOf('.', rv)), 10);
-            }
+<section class="switcher-body">
+<a href="#" title="Prev" class="icon-chevron-left products-prev"></a>
+<div class="products-wrapper">
+<div class="products-list clearfix">
+</div>
+</div>
+<a href="#" title="Next" class="icon-chevron-right products-next"></a>
+</section>
 
-            var edge = ua.indexOf('Edge/');
-            if (edge > 0) {
-                // Edge (IE 12+) => return version number
-                return parseInt(ua.substring(edge + 5, ua.indexOf('.', edge)), 10);
-            }
+<iframe class="product-iframe" frameborder="0" border="0"></iframe>
 
-            // other browser
-            return false;
-        }
-
-        // Adjust layout based on the browser width
-        function adjustLayout() {
-            let block1, block2, block3, block4, block5, block6, block7, block8, block9;
-
-            if (window.innerWidth <= 1199) {
-                // Mobile layout
-                nextLayout = "mobile";
-                block1 = $("div[data-mobile-seq-no='1']");
-                block2 = $("div[data-mobile-seq-no='2']");
-                block3 = $("div[data-mobile-seq-no='3']");
-                block4 = $("div[data-mobile-seq-no='4']");
-                block5 = $("div[data-mobile-seq-no='5']");
-                block6 = $("div[data-mobile-seq-no='6']");
-                block7 = $("div[data-mobile-seq-no='7']");
-                block8 = $("div[data-mobile-seq-no='8']");
-                block9 = $("div[data-mobile-seq-no='9']");
-            } else {
-                // Desktop layout
-                nextLayout = "desktop";
-                block1 = $("div[data-desktop-seq-no='1']");
-                block2 = $("div[data-desktop-seq-no='2']");
-                block3 = $("div[data-desktop-seq-no='3']");
-                block4 = $("div[data-desktop-seq-no='4']");
-                block5 = $("div[data-desktop-seq-no='5']");
-                block6 = $("div[data-desktop-seq-no='6']");
-                block7 = $("div[data-desktop-seq-no='7']");
-                block8 = $("div[data-desktop-seq-no='8']");
-                block9 = $("div[data-desktop-seq-no='9']");
-            }
-
-            if (nextLayout !== currentLayout) {
-                // Reorder blocks based on their seq no
-                block1.after(block2.detach());
-                block2.after(block3.detach());
-                block3.after(block4.detach());
-                block4.after(block5.detach());
-                block5.after(block6.detach());
-                block6.after(block7.detach());
-                block7.after(block8.detach());
-                block8.after(block9.detach());
-                currentLayout = nextLayout;
-            }
-        }
-
-        // Adjust layout upon window resize
-        window.onresize = function () {
-            clearTimeout(callAdjustLayout);
-            callAdjustLayout = setTimeout(adjustLayout, 100);
-        }
-
-        // DOM is ready
-        $(function () {
-            if (detectIE()) {
-                alert('Please use the latest version of Chrome or Firefox for best browsing experience.');
-            }
-
-            adjustLayout();
-        })
-    </script>
-</body>
-
+<script src="//ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js" type="3cf86d1824efd1c5f58f0ad5-text/javascript"></script>
+<script src="assets/js/products.js" type="3cf86d1824efd1c5f58f0ad5-text/javascript"></script>
+<script src="assets/js/application.min.js" type="3cf86d1824efd1c5f58f0ad5-text/javascript"></script>
+<script src="https://ajax.cloudflare.com/cdn-cgi/scripts/95c75768/cloudflare-static/rocket-loader.min.js" data-cf-settings="3cf86d1824efd1c5f58f0ad5-|49" defer=""></script></body>
 </html>
