--- a/index.html
+++ b/index.html
@@ -1,3 +1,5 @@
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
+<!-- saved from url=(0047)file:///C:/Users/HP/Documents/My%20Profile.html -->
 <html xmlns="http://www.w3.org/1999/xhtml" class="gr__chungquantin_github_io"><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 <title>My Profile</title>
 
@@ -52,13 +54,13 @@ Hobbies</strong>: Jogging, reading books, reviewing movies
     
     <h1>Interest in IT<img src="./My Profile_files/rmit.png" width="3%" align="right"></h1>
     <h3>What is your interest in IT?</h3>
-<p><img height="30%" width="26%" src="./My Profile_files/pic1.jpg" style="padding: 0 15px; float: left;"></p>
+<p><img height="" width="26%" src="./My Profile_files/pic1.jpg" style="padding: 0 15px; float: left;"></p>
 <p style="margin-top: 20px;"> </p>
     <p>Being a part of the modern civilization, living in a digital world under the fourth industrial revolution I have witnessed a lot of changes made by technologies and machines that affected the whole society positively. Therefore, I want to delve into the tech-world to exploit the potential of IT then contribute to the community, bring out the best in myself for fulfilling the human’s demands with my innovative ideas and endeavors. </p>
     <h3>When did your interest in IT start?</h3>
     <p>Back to the stage when I was a kid, I had close exposure to many video games but I only took them for entertainment. Not until I had grown up did my curiosity for the technical process to make those games rise. When the Internet approached and became prevalent in Vietnam, software as applications and electronic devices as smartphone attached to my daily life. Thus, I realized that using them is not enough for me, I have to create them.</p>    
     <h3>Was there a particular event or person that sparked your interest?</h3>
-    <p><img style="padding: 0 15px; float: right;" src="./My Profile_files/pic2.jpg" width="27%" height="40%"></p>
+    <p><img style="padding: 0 15px; float: right;" src="./My Profile_files/pic2.jpg" width="27%" height=""></p>
 <p>My cousin is the one who inspired me to study IT. I occasionally witnessed him playing with codes then creating his own game, I found that it was so astounding and I want to become someone like him, work as an innovator.</p>
 <h3>What do you expect to learn during your studies?</h3>
 <p>I want to learn how to code, technical skills like analyzing, mind-mapping and gain soft skills such as presentation skills, improve communication skills. Know how to have an alignment and seamless collaboration in teamwork. During my studies, an internship is also very crucial because it can offer me the chance to have a job. After my studies, my expectation for the outcome is to have essential knowledge and skills in my expertise and to be able to envision for my future career. </p>
@@ -70,14 +72,14 @@ Hobbies</strong>: Jogging, reading books, reviewing movies
 </li></ul><p></p>
       
     <h1>Ideal Job<img src="./My Profile_files/rmit.png" width="3%" align="right"></h1><p><a href="https://itviec.com/viec-lam-it/middle-ios-developer-sun-inc-3641">
-<img src="./My Profile_files/suninc.png" width="100%" height="90%">
+<img src="./My Profile_files/suninc.png" width="100%">
     </a></p>
 
 <p>	My role in the Sun* Inc. will be responsible for several tasks such as coding, modifying, developing and updating the current products. As an iOS developer, my obligations are to be able to take the system under control, secure the maintenance system. Moreover, I can also the source to produce innovative ideas. Technically, employees are required to have the mandatory skill to resolve the problems on the platform which is iOS.</p>
 	<p>This position as an iOS developer would be a great fit for my range of ability and the direction of my career path. The first and foremost reason for me to be attracted by it is the appropriate salary. Next, Japanese professionalism in the workplace is a great deal for me because Japanese is my third language, therefore, improving the language and achieve the certification. Finally, I can gain experience and needed skills to implement for my future project( such as research on AI, VR/AR,…)
 </p><h3>Skills, qualifications, and experience required for the position:</h3>
 <p>
-<img style="padding: 0 15px; float: right;" src="./My Profile_files/objective-c.jpg" width="15%" height="30%"></p><ul>
+<img style="padding: 0 15px; float: right;" src="./My Profile_files/objective-c.jpg" width="15%"></p><ul>
     <li>Bachelor degree/ Master degree (not compulsory) in Computer Science, Information Technology or Software Engineering</li>
 <li>Be highly proficient in programming languages including C, Objective-C/ Objective-C++, Java, Swift.</li>
 <li>Linguistic ability, especially in English or Japanese.  
@@ -101,9 +103,9 @@ Hobbies</strong>: Jogging, reading books, reviewing movies
 </p>
 
 <h1>Personal Profile<img src="./My Profile_files/rmit.png" width="3%" align="right"></h1>
-    <h3>What do the results of these tests mean for you? </h3><ul><li>   <img style="padding: 0 15px; float: right;" src="./My Profile_files/infp.png" width="15%" height="30%">It gives me a clear definition of my personality and other aspects of my self. The tests indicate the information on how environmental factors affect lifestyle and the development of conscience. Moreover, the tests help me to easily imagine what are suitable roles for me in a group or a company.</li><li>  Having gotten to know about my strengths and weaknesses, I can be able to set a plan to improve and overcome those aspects then use them to apply to a practical situation.
-<img style="padding: 0 15px; float: left;" src="./My Profile_files/learningstyle.png" width="20%" height="30%">For instance, lean on the result from the Myers-Briggs test, I know my strong point is being a healer in a team( INFP) so that theoretically, I can bring the team together and help them avoid conflicts during working progress. Otherwise, understanding my learning style helps me to pay attention to the suitable methods to make my work efficient and productive.</li><li>
-    <img style="padding: 0 15px; float: right;" src="./My Profile_files/personality.png" width="25%" height="30%">Get to know mine and other team players’ persona would bridge the gap between communication misunderstanding. Therefore, all of members can make a consensus and designate every member’s role in the team. Then, assignments are assigned equally and overloaded work can be avoided. 
+    <h3>What do the results of these tests mean for you? </h3><ul><li>   <img style="padding: 0 15px; float: right;" src="./My Profile_files/infp.png" width="15%">It gives me a clear definition of my personality and other aspects of my self. The tests indicate the information on how environmental factors affect lifestyle and the development of conscience. Moreover, the tests help me to easily imagine what are suitable roles for me in a group or a company.</li><li>  Having gotten to know about my strengths and weaknesses, I can be able to set a plan to improve and overcome those aspects then use them to apply to a practical situation.
+<img style="padding: 0 15px; float: left;" src="./My Profile_files/learningstyle.png" width="20%">For instance, lean on the result from the Myers-Briggs test, I know my strong point is being a healer in a team( INFP) so that theoretically, I can bring the team together and help them avoid conflicts during working progress. Otherwise, understanding my learning style helps me to pay attention to the suitable methods to make my work efficient and productive.</li><li>
+    <img style="padding: 0 15px; float: right;" src="./My Profile_files/personality.png" width="25%">Get to know mine and other team players’ persona would bridge the gap between communication misunderstanding. Therefore, all of members can make a consensus and designate every member’s role in the team. Then, assignments are assigned equally and overloaded work can be avoided. 
 </li>
 </ul>
    <h1>Project Idea<img src="./My Profile_files/rmit.png" width="3%" align="right"></h1>
@@ -130,7 +132,7 @@ A second one is to sell directly to Culi-Lab. Sellers do not have to get through
 Get inspiration from Khan Academy, however, this is specialized in cooking courses. To make your work profitably, the first method in the market section is applied to the education section. To access the courses, learners need to pay for them, the price of courses is suggested by the course’s owner. It can be free or cost money. Every course includes recipes, instructions, a profile of the lecturer,… After finishing any course, learners will be acknowledged by the lecturer if they can show record a short clip demonstrating their skills. Every lecturer has their ranking level, the more people purchase their course and feedbacks given by them, the more levels they gain. At the end of the year, Culi-Lab is going to reward the accounts reaching milestones of the season.
 </p>
 <h4>Tools &amp; Technologies</h4>
-<p> To create a dynamic software like Culi-Lab, there’re a lot of technologies needed. First and foremost, a large system to store data is necessary, cloud computing or data analysis is what this software desires.<img style="padding: 0 15px; float: right;" src="./My Profile_files/xcode.png" width="25%" height="30%"> Secondly, to create the application, we need a development tool to design and build the app, several highly recommended apps such as Xcode and AppCode which are used commonly for iOS app development. More than that, React Native can be used to construct a software which can work on multiple platforms, in both Android and iOS. </p>
+<p> To create a dynamic software like Culi-Lab, there’re a lot of technologies needed. First and foremost, a large system to store data is necessary, cloud computing or data analysis is what this software desires.<img style="padding: 0 15px; float: right;" src="./My Profile_files/xcode.png" width="25%"> Secondly, to create the application, we need a development tool to design and build the app, several highly recommended apps such as Xcode and AppCode which are used commonly for iOS app development. More than that, React Native can be used to construct a software which can work on multiple platforms, in both Android and iOS. </p>
 <h4>Skills Required</h4>
  <p>It is compulsory to have a deep comprehension in algorithms and programming, therefore, I need to have an advanced level in programming languages ( Swift, Objective-C,…). Understanding the users’ demand and predict their needs in the future market. Have an ability to design a good looking layout related to UX/UI study. On the other hand, web technologies such as HTML, CSS, XML are essential in building the e-commerce website ( which will connect directly to the forum and market section of the application). When the app behaves with a large pool of data, security and maintenance are taken into account, so in the first place, I need to have a good mindset of coding to alleviate bugs and optimize code to improve workflow.  </p>
 <h4>Outcome</h4>
