--- a/index.html
+++ b/index.html
@@ -35,6 +35,7 @@
 Spoken language</strong>: Vietnamese, English <br><strong>
 Education to date</strong>: Graduated Highschool <br><strong>
 Hobbies</strong>: Jogging, reading books, reviewing movies 
+<strong>Fact</strong>: I'm an introvert but quite pessimistic, I glad to be friend with anyone who willing to share with me their stories. Honestly, I don't have many friends, therefore, I always treat everyone who approachs to me with my whole heart, I'm not lying.
  </p>
     <h1>Favorite books</h1>
     
